# Search_for_vacancies

./: README.md  main.py  pyproject.toml
data/: data.json
idea/: misc.xml
src/: abstract_classes.py  config.py  hh_ru_parsing_data.py  work_with_file.py  work_with_vacancies.py
tests/: test_hh_ru_parsing_data.py  test_work_with_file.py  test_work_with_vacancies.py
